--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>My Website Title</title>
+    </head>
+    <body>
+        <h1>Welcome to my Website</h1>
+        <p>Please click on the below link to open my Website</p>
+        <a href="https://flatironschool.com">Flatiron School</a>
+    </body>
+</html>
